[tool.poetry]
name = "real-estate-bot"
version = "0.1.0"
description = "Real Estate Telegram Bot"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.3"
gunicorn = "^21.2.0"
uvicorn = "^0.29.0"
flask = "^3.0.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
razorpay = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
