[tool.poetry]
name = "Realestate"
version = "0.1.0"
description = "Real Estate Telegram Bot"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.3"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
razorpay = "^1.4.0"
gunicorn = "^21.2.0"
uvicorn = "^0.29.0"
fastapi = "^0.104.0"
flask = "^3.0.0"
sqlalchemy = "^2.0.0"
python-multipart = "^0.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
